# vectra

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.ollama.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_email_verification_otp.py  003_add_platform_admin.py  004_add_invitations_table.py  005_add_password_change_otp.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  crew.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/orchestrator/: __init__.py  campaign_runner.py  state_machine.py
backend/app/schemas/: __init__.py  auth.py  campaign.py  email.py  lead.py  notification.py  organization.py  platform.py  user.py
backend/app/services/: __init__.py  auth.py  calendly.py  campaign.py  email.py  email_generator.py  email_verification.py  enrichment.py  invitation.py  lead.py  notification.py  organization.py  password_change.py  password_reset.py  platform.py  resend.py  rocketreach.py  scoring.py
backend/app/tasks/: __init__.py  bant.py  celery_app.py  prospector.py  scheduler.py
backend/scripts/: create_admin.py  seed_database.py
backend/tests/: README.md  conftest.py  factories.py
backend/tests/e2e/: test_auth_flow.py  test_campaign_flow.py  test_organization_management_flow.py  test_platform_admin_flow.py
(+172 files in other folders)
