[project]
name = "vectra-backend"
version = "1.0.0"
description = "Vectra AI Sales Agents - Backend API"
requires-python = ">=3.11"
dependencies = []

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "e2e: End-to-end tests",
    "integration: Integration tests",
    "unit: Unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
root = "."
include = ["app", "tests"]
exclude = ["venv", ".venv", "__pycache__"]
venvPath = "."
venv = "venv"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
strict = false
warn_return_any = false
warn_unused_configs = true
